asm_tests/other_testfiles/invalid_files/error57.s
.name "MORO"
.comment "MORJESTA!"

ll d %12 , r12
